overflow fix to stop animations from destroying the website on mobile

--- a/janiczek.css
+++ b/janiczek.css
@@ -191,6 +191,7 @@ header.main {
     width: 100%;
     position: relative;
     padding-top: 3.65rem
+    overflow-x: hidden;
 }
 .center {
     margin: 0 auto;
